--- a/index.html
+++ b/index.html
@@ -1270,27 +1270,54 @@
                     </div>
                 </div>`;
             } else if (r.disputeStatus === 'approved') {
-                disputeHtml += `<div class="bg-green-50 p-4 rounded-xl border border-green-100 mb-4 flex items-center gap-3">
-                    <div class="p-2 bg-green-100 text-green-600 rounded-lg">
-                        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor"><path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd" /></svg>
-                    </div>
-                    <div>
-                        <h4 class="font-bold text-green-700 text-xs uppercase">Dispute Approved</h4>
-                        <p class="text-[10px] text-green-600 font-bold">This record has been voided and excluded from stats.</p>
+                disputeHtml += `<div class="bg-green-50 p-4 rounded-xl border border-green-100 mb-4 animate-in fade-in slide-in-from-bottom-2">
+                    <div class="flex items-start gap-3">
+                        <div class="p-2 bg-green-100 text-green-600 rounded-lg">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor"><path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd" /></svg>
+                        </div>
+                        <div class="flex-1">
+                            <h4 class="font-bold text-green-700 text-xs uppercase mb-1">Dispute Approved</h4>
+                            <p class="text-[10px] text-green-600 font-bold mb-2">This record has been voided and excluded from stats.</p>
+                            <div class="bg-white p-3 rounded-lg border border-green-100">
+                                <span class="text-[9px] font-black text-slate-400 uppercase tracking-widest block mb-1">Operator's Reason:</span>
+                                <p class="text-sm text-slate-600 italic">"${r.disputeReason}"</p>
+                            </div>
+                            ${isAdmin ? `
+                            <div class="mt-3">
+                                <button onclick="window.undoDisputeDecision(${index})" class="px-4 py-2 bg-white border border-slate-200 text-slate-600 text-xs font-bold rounded-lg hover:bg-slate-50 shadow-sm transition-all">Undo Approval</button>
+                            </div>
+                            ` : ''}
+                        </div>
                     </div>
                 </div>`;
             } else if (r.disputeStatus === 'rejected') {
-                 disputeHtml += `<div class="bg-red-50 p-4 rounded-xl border border-red-100 mb-4 flex flex-col gap-2">
-                    <div class="flex items-center gap-3">
+                 disputeHtml += `<div class="bg-red-50 p-4 rounded-xl border border-red-100 mb-4 animate-in fade-in slide-in-from-bottom-2">
+                    <div class="flex items-start gap-3">
                         <div class="p-2 bg-red-100 text-red-600 rounded-lg">
                             <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor"><path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zM8.707 7.293a1 1 0 00-1.414 1.414L8.586 10l-1.293 1.293a1 1 0 101.414 1.414L10 11.414l1.293 1.293a1 1 0 001.414-1.414L11.414 10l1.293-1.293a1 1 0 00-1.414-1.414L10 8.586 8.707 7.293z" clip-rule="evenodd" /></svg>
                         </div>
-                        <div>
-                            <h4 class="font-bold text-red-700 text-xs uppercase">Dispute Rejected</h4>
-                            <p class="text-[10px] text-red-600 font-bold">The dispute was reviewed and denied. Record remains active.</p>
+                        <div class="flex-1">
+                            <h4 class="font-bold text-red-700 text-xs uppercase mb-1">Dispute Rejected</h4>
+                            <p class="text-[10px] text-red-600 font-bold mb-2">The dispute was reviewed and denied. Record remains active.</p>
+                            <div class="space-y-2">
+                                <div class="bg-white p-3 rounded-lg border border-red-100">
+                                    <span class="text-[9px] font-black text-slate-400 uppercase tracking-widest block mb-1">Operator's Reason:</span>
+                                    <p class="text-xs text-slate-600 italic">"${r.disputeReason}"</p>
+                                </div>
+                                ${r.disputeRejectionReason ? `
+                                <div class="bg-white p-3 rounded-lg border border-red-100">
+                                    <span class="text-[9px] font-black text-red-400 uppercase tracking-widest block mb-1">Lead's Note:</span>
+                                    <p class="text-xs text-red-800 italic">"${r.disputeRejectionReason}"</p>
+                                </div>
+                                ` : ''}
+                            </div>
+                            ${isAdmin ? `
+                            <div class="mt-3">
+                                <button onclick="window.undoDisputeDecision(${index})" class="px-4 py-2 bg-white border border-slate-200 text-slate-600 text-xs font-bold rounded-lg hover:bg-slate-50 shadow-sm transition-all">Undo Rejection</button>
+                            </div>
+                            ` : ''}
                         </div>
                     </div>
-                    ${r.disputeRejectionReason ? `<div class="ml-11 bg-white p-3 rounded-lg border border-red-100 text-xs text-red-800 italic">"Note from Lead: ${r.disputeRejectionReason}"</div>` : ''}
                 </div>`;
             }
 
@@ -1441,6 +1468,33 @@
             }
 
             if(window.showToast) window.showToast(`Dispute ${isApproved ? 'Approved' : 'Rejected'}`);
+            
+            // Immediate reflection
+            window.viewRecord(index); 
+            if(window.renderRecordsUI) window.renderRecordsUI();
+        };
+
+        // NEW: Undo Decision Function
+        window.undoDisputeDecision = async function(index) {
+            const confirmed = await window.AppModal.show("Undo Decision", "Are you sure you want to undo this decision? The dispute will be marked as 'Pending' again.", "confirm");
+            if (!confirmed) return;
+
+            const r = window.records[index];
+            const updates = {
+                disputeStatus: 'pending',
+                isDisputed: false, // Bring it back to active counts until approved
+                disputeRejectionReason: null 
+            };
+
+            // Optimistic Update
+            Object.assign(r, updates);
+
+            // Save to Firebase
+            if (window.updateFirebaseRecord && r.id) {
+                await window.updateFirebaseRecord(r.id, updates);
+            }
+
+            if(window.showToast) window.showToast("Decision undone. Dispute is pending.");
             
             // Immediate reflection
             window.viewRecord(index); 
